--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+
 	<!----hero Section start---->
 
 	<div class="hero">
@@ -47,20 +48,7 @@
 		</div>
 	</div>
 
-	<!----About section start---->
-	<section class="about" id="about">
-		<div class="main">
-			<img src="img/main-img.png"> 
-			<div class="about-text">
-				<h2>Sobre</h2>
-				<h5>Desenvolvedor <span>full stack</span></h5>
-				<p>​
-					Minha missão é prover soluções inovadoras, com eficiência
-					e eficácia, a fim de impactara o mercador de tecnologia. Atuando de forma integrada e comprometida.</p>
-				<button type="button">Let's Talk</button>
-			</div>
-		</div>
-	</section>
+
 
 	<!-----service section start----------->
 	<div class="service" id="service">
@@ -70,37 +58,43 @@
 
 		<div class="box">
 			<div class="card">
-				<i class="fas fa-bars"></i>
-				<h5>Web Development</h5>
+				<img src="img/cloneYoutube.jpg" /><br> 
+				<h5>Clone Youtube</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
+				
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://github.com/Climacobnu/CloneYoutube" target="_blank">Read More</a>
 					</p>
 				</div>
 			</div>
 
 			<div class="card">
-				<i class="far fa-user"></i>
-				<h5>Web Development</h5>
+				<img src="img/CloneNetFlix.jpg" /><br> 
+				<h5>Clone NetFlix</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://github.com/Climacobnu/CloneNetFlix" target="_blank">Read More</a>
 					</p>
 				</div>
 			</div>
 
 			<div class="card">
-				<i class="far fa-bell"></i>
-				<h5>Web Development</h5>
+				<img src="img/chatbot.jpg" /><br> 
+				<h5>Chatbot</h5>
 				<div class="pra">
-					<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
 
 					<p style="text-align: center;">
-						<a class="button" href="#">Read More</a>
+						<a class="button" href="https://github.com/Climacobnu/chatbot" target="_blank">Read More</a>
 					</p>
 				</div>
 			</div>
@@ -119,35 +113,38 @@
 	
 			<div class="box">
 				<div class="card">
-					<i class="fas fa-bars"></i>
-					<h5>Web Development</h5>
-					<div class="pra">
-						<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-	
+					<img src="img/Cardapio.JPG" /><br> 
+					<h5>App Cardapio</h5>
+				<div class="pra">
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
 						<p style="text-align: center;">
-							<a class="button" href="#">Read More</a>
+							<a class="button" href="https://github.com/Climacobnu/app_cardapio" target="_blank">Read More</a>
 						</p>
 					</div>
 				</div>
 	
 				<div class="card">
-					<i class="far fa-user"></i>
-					<h5>Web Development</h5>
-					<div class="pra">
-						<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-	
+					<img src="img/geradorMegaSena.JPG" /><br> 
+					<h5>Gerador nº Mega-Sena</h5>
+				<div class="pra">
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
 						<p style="text-align: center;">
-							<a class="button" href="#">Read More</a>
+							<a class="button" href="https://github.com/Climacobnu/Mega-Sena" target="_blank">Read More</a>
 						</p>
 					</div>
 				</div>
 	
 				<div class="card">
-					<i class="far fa-bell"></i>
-					<h5>Web Development</h5>
-					<div class="pra">
-						<p>Every website should be built with two primary goals: Firstly, it needs to work across all devices. Secondly, it needs to be fast as possible.</p>
-	
+					<img src="img/main-img.png" /><br> 
+					<h5>-----</h5>
+				<div class="pra">
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
 						<p style="text-align: center;">
 							<a class="button" href="#">Read More</a>
 						</p>
@@ -157,23 +154,90 @@
 		</div>
 
 
+			<!-----service section start----------->
+	<div class="service" id="service">
+		<div class="title">
+			<h2>Projetos</h2>
+		</div>
+
+		<div class="box">
+			<div class="card">
+				<img src="img/JogoDaVelha.jpg" /><br> 
+				<h5>Jogo da Velha</h5>
+				<div class="pra">
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
+
+					<p style="text-align: center;">
+						<a class="button" href="https://github.com/Climacobnu/tictactoe" target="_blank">Read More</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img src="img/pedraPapelTesoura.JPG" /><br> 
+				<h5>Pedra Papel ou Tesoura</h5>
+				<div class="pra">
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
+					<p style="text-align: center;">
+						<a class="button" href="https://github.com/Climacobnu/rock-paper-scissors" target="_blank">Read More</a>
+					</p>
+				</div>
+			</div>
+
+			<div class="card">
+				<img src="img/xadrez.jpg" /><br> 
+				<h5>Xadrez</h5>
+				<div class="pra">
+					<p>JavaScript<br>
+						Html<br>
+						Css</p>
+					<p style="text-align: center;">
+						<a class="button" href="https://github.com/Climacobnu/Xadrez" target="_blank">Read More</a>
+					</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<!----About section start---->
+	<section class="about" id="about">
+		<div class="main">
+			<img src="img/main-img.png"> 
+			<div class="about-text">
+				<h2>Sobre</h2>
+				<h5>Desenvolvedor <span>full stack</span></h5>
+				<p>​
+					Minha missão é prover soluções inovadoras, com eficiência
+					e eficácia, a fim de impactara o mercador de tecnologia. Atuando de forma integrada e comprometida.</p>
+				<button type="button"></button>
+			</div>
+		</div>
+	</section>
+
+
 
 	<!------Contact Me------>
 	<div class="contact-me">
-		<p>Let Me Get You A Beautiful Website.</p>
-		<a class="button-two" href="#">Hire Me</a>
+		<!-- <p>Let Me Get You A Beautiful Website.</p>
+		<a class="button-two" href="#">Hire Me</a> -->
 	</div>
 
 	<!------footer start--------->
 	<footer>
-		<p>Tahmid Ahmed</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		<p>Leandro Climaco</p>
+		<p>Desenvolvimento em HTML, CSS e JavaScript</p>
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
-			<a href="#"><i class="fab fa-dribbble"></i></a>
+
+			<a href="https://github.com/Climacobnu" target="_blank"><i class="fab fa-github"></i></a>
+			<a href="https://www.linkedin.com/in/leandro-climaco-3b133566/" target="_blank"><i class="fab fa-linkedin-square"></i></a>
+			<a href="https://climacobnu.blogspot.com/" target="_blank"><i class="fab fa-blogger-b"></i></a>
 		</div>
-		<p class="end">CopyRight By Tahmid Ahmed</p>
+		
 	</footer>
 </body>
 </html>
