--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 	<title>Portfolio website</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" >
 	<link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     
-	
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+	 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -25,7 +26,7 @@
 				<li><a href="#">Home</a></li>
 				<li><a href="#service">Projetos</a></li>
 				<li><a href="#about">Sobre</a></li>
-				<li><a href="#">Skills</a></li>
+				<li><a href="#skills">Skills</a></li>
 				<li><a href="#">Contato</a></li>
 			</ul>
 			<a  href="https://github.com/Climacobnu" target="_blank" <i class="fab fa-github" style="font-size:24px;color:red"></i></a>
@@ -219,7 +220,21 @@
 		</div>
 	</section>
 
+	<!----About section start---->
 
+ 	<div class="skills">
+		<section class="skills" id="skills">
+		<section id="skills">
+		<progress value="80" max="100"></progress><span>JavaScript/jQuery</span>
+		<progress value="70" max="100"></progress><span>HTML5/CSS3</span>
+		<progress value="60" max="100"></progress><span>NodeJS</span>
+		<progress value="70" max="100"></progress><span>Java/PHP</span>
+		<progress value="60" max="100"></progress><span>MySQL</span>
+		<progress value="80" max="100"></progress><span>Photoshop</span>
+		</section>
+
+	</div>
+	</div>
 
 	<!------Contact Me------>
 	<div class="contact-me">
@@ -239,5 +254,9 @@
 		</div>
 		
 	</footer>
+
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flickity/3.0.0/flickity.pkgd.min.js"></script>
+	<script src="script.js"></script>
+	
 </body>
 </html>
